--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,12 @@
 apply plugin: 'com.android.application'
 apply plugin: 'me.tatarka.retrolambda'
+apply plugin: 'com.dodola.rocoofix'
+
+repositories {
+    flatDir {
+        dirs 'libs'
+    }
+}
 android {
 
 
@@ -35,7 +42,7 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -92,4 +99,20 @@ dependencies {
 
 
     compile 'com.alibaba:fastjson:1.1.54.android'
+
+    //hotfix
+
+    compile 'com.dodola:rocoo:1.1'
+    compile(name: 'AndroidQuery-release', ext: 'aar')
 }
+
+rocoo_fix {
+
+    preVersionPath = '1'//注意：此项属性只在需要制作补丁的时候才需开启！！如果不需要制作补丁则需要去掉此项
+
+    enable = true//注意：关掉此项会无法生成Hash.txt文件
+
+    scanref=true//默认为 false，开启这个选项会将与补丁 class 相引用的 class 都打入包中来解决 ART 虚拟机崩溃问题，功能 Beta 中
+}
+
+
