--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,9 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.1'
         classpath 'me.tatarka:gradle-retrolambda:3.3.0'
+        classpath 'com.dodola:rocoofix:1.2.6'
+
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
