--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,7 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -82,8 +82,12 @@ dependencies {
     //pickerview
     compile 'cn.qqtheme.framework:WheelPicker:latest.release'
 
+    //photoPicker ---android6.0 write_Setting bug
+    compile 'me.iwf.photopicker:PhotoPicker:0.9.0@aar'
+
     //photoPicker
-    compile 'me.iwf.photopicker:PhotoPicker:0.8.5@aar'
+    compile 'com.droidninja:filepicker:1.0.6'
+
     compile 'com.android.support:recyclerview-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
     compile 'com.nineoldandroids:library:2.4.0'
